--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,26 +1,1 @@
-*{
-    margin: 0px;
-}
-
-body {
-    height: 100vh;
-    background-color: black;
-    background-image: url('../Hacker-celular.jpg');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-}
-
-div {
-    padding: 5px;
-    text-indent: 30px;
-    text-align: justify;
-    text-align: center;
-    position: absolute;
-    background-color: #f00;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 400px;
-}
+@charset "UTF-8";
