--- a/estilo/style.css
+++ b/estilo/style.css
@@ -4,7 +4,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&family=Workbench&display=swap');
 
-:root{
+:root {
     --font1: Verdana, Geneva, Tahoma, sans-serif;
     --font2: "Passion One", sans-serif;
     --font3: "Sriracha", cursive;
@@ -49,7 +49,7 @@ a:hover {
     text-decoration: underline;
 }
 
-section{
+section {
     padding-top: 10vh;
     padding-bottom: 10vh;
     line-height: 2em;
@@ -58,10 +58,15 @@ section{
     font-size: 3.5vw;
 }
 
+section>p {
+    padding-bottom: 2em;
+}
+
 section.imagem>p {
     padding: 5px;
     display: inline-block;
-    background-color: rgb(51, 50, 50);
+    background-color: rgba(0, 0, 0, 0.432);
+    text-shadow: 2px 2px 0px rgb(6, 6, 6);
 }
 
 section.normal {
@@ -70,13 +75,28 @@ section.normal {
 }
 
 section.imagem {
-    background-color: rgb(69, 66, 66);
+    background-color: rgba(69, 66, 66, 0.381);
     color: white;
+    box-shadow: inset 6px 6px 13px black;
+    background-attachment: fixed;
 }
 
-footer{
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+footer {
     background-color: black;
     color: white;
     text-align: center;
     padding: 10px;
+    font-size: 2vw;
 }
